Left and right buttons incorporated

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Mustard</title>
+    <script src="https://kit.fontawesome.com/2500930c5f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
