Minor css adjustments like font and alignment

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <title>Mustard</title>
     <script src="https://kit.fontawesome.com/2500930c5f.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
