Minor HTML fixes and fixing compression

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,18 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="author" content="RPP31 Team Mustard">
+    <meta name="description" content="A single page shopping site with a product overview, related products and outfit saver,
+    a Q&A section, and a reviews and ratings section.">
     <title>Mustard</title>
-    <script src="https://kit.fontawesome.com/2500930c5f.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/2500930c5f.js" crossorigin="anonymous" defer></script>
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@300;400;500;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@400;700;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Fascinate&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
     <div id="app">
-      react not working
+      React not working
     </div>
     <script src="bundle.js"> </script>
   </body>
