CSS styling for product cards

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,8 +5,8 @@
     <meta name="author" content="RPP31 Team Mustard">
     <meta name="description" content="A single page shopping site with a product overview, related products and outfit saver,
     a Q&A section, and a reviews and ratings section.">
+    <meta name="viewport" content="width=1040, initial-scale=1">
     <title>Mustard</title>
-    <style> #app {font-family: 'Nanum Gothic', sans-serif;} </style>
     <style>
       /* product name */
       @font-face {
