complete outfitList button css

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -73,6 +73,7 @@
       .ri-check-line:before { content: "\eb7b"; }
       .ri-checkbox-circle-line:before { content: "\eb81"; }
       .ri-star-fill:before { content: "\f186"; }
+      .ri-star-line:before { content: "\f18b"; }
       .ri-close-fill:before { content: "\eb98"; }
 
     </style>
