--- a/client/public/index.html
+++ b/client/public/index.html
@@ -74,8 +74,7 @@
       .ri-fw { text-align: center; width: 1.25em; }
 
       .ri-add-line:before { content: "\ea13"; }
-      /* .ri-arrow-down-s-fill:before { content: "\ea4d"; } */
-      .ri-arrow-down-fill:before { content: "\ea4b"; }
+      .ri-arrow-down-s-fill:before { content: "\ea4d"; }
       .ri-arrow-left-circle-line:before { content: "\ea5c"; }
       .ri-arrow-left-s-line:before { content: "\ea64"; }
       .ri-arrow-right-circle-line:before { content: "\ea68"; }
